Finally got around to doing the contact/about us section

--- a/app/views/familiars/index.html.erb
+++ b/app/views/familiars/index.html.erb
@@ -1,5 +1,12 @@
 <h1>Welcome to my store!</h1>
 
+<nav>
+  <ul>
+    <li><%= link_to 'About Us', controller: 'about' %></li>
+    <li><%= link_to 'Contact Us', controller: 'contact' %></li>
+  </ul>
+</nav>
+
 <%= paginate @familiars %>
 
 <%= form_tag(familiars_path, :method => "get", id: "search-form") do %>
